# dedup

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/dedup/: __init__.py  cli.py  comparator.py  config.py  db.py  deleter.py  embedder.py  hasher.py  models.py  organizer.py  pathutil.py  perceptual.py  reporter.py  scanner.py
tests/: conftest.py  test_comparator.py  test_db.py  test_deleter.py  test_hasher.py  test_organizer.py  test_pathutil.py  test_perceptual.py  test_scanner.py
